--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -32,7 +32,7 @@
     "description": "app token is needed for extension to work"
   },
   "save_invalid_token_message": {
-    "message": "App token is invalid.",
+    "message": "App token retry limit reached.",
     "description": "app token is not valid"
   },
   "save_server_down_message": {
