--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -32,7 +32,7 @@
     "description": "app token is needed for extension to work"
   },
   "save_invalid_token_message": {
-    "message": "App密码格式不正确。",
+    "message": "App令牌验证多次失败。",
     "description": "app token is not valid"
   },
   "save_server_down_message": {
